# dol_save_server

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yaml  dol_save_server.toml  dol_save_server_docker.toml  dol_save_server_example.toml  download.nu  download.toml  package.nu
.cargo/: config.toml
.github/workflows/: release.yml
html/: login.html  savelist.html
mod/: boot.template.json
mod/js/: dol_server_save.js  save.js
mod/twee/: dss_dialog_button.twee  dss_save_list.twee
pwa/: manifest.json
script/: build-docker.nu  download.nu  download.toml
src/: args.rs  backup.rs  config.rs  main.rs  pwa.rs  web.rs
src/api/: auth.rs  game.rs  mod.rs  pwa.rs
src/api/save/: code.rs  list.rs  mod.rs  remove.rs  save.rs
src/auth/: login.rs  mod.rs  user.rs
src/config/: backup.rs  game.rs  mod.rs  server.rs
src/save/: code.rs  list.rs  mod.rs  remove.rs  save.rs
src/web/: game_name.rs  mod.rs
web/: game.html  login.html  save.html  sw.js
web/pwa/: manifest.json
