[package]
name = "dol_save_server"
version = "0.2.0"
edition = "2021"
authors = ["C113<949536395@qq.com>"]

[dependencies]
async-trait = "0.1.85"
axum = { version = "0.8.1", features = [] }
chrono = { version = "0.4.39", default-features = false, features = [
    "clock",
    "std",
] }
clap = { version = "4.5.27", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "fs",
    "io-util",
] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs", "compression-full"] }
tower-sessions = "0.14.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["chrono", "env-filter"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
