[package]
name = "dol_save_server"
version = "0.6.0"
edition = "2021"
authors = ["C113<949536395@qq.com>"]

[dependencies]
axum = { version = "0.8.1", features = [] }
axum-server = { version = "0.7.1", features = ["tls-rustls-no-provider"] }
base64 = "0.22.1"
chrono = { version = "0.4.39", default-features = false, features = [
    "clock",
    "std",
] }
lz-str = "0.2.1"
rustls = { version = "0.23.22", default-features = false, features = [
    "std",
    "ring",
] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "fs",
    "io-util",
] }
toml = "0.8.19"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs", "compression-full", "set-header"] }
tower-sessions = "0.14.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["chrono", "env-filter"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
