[package]
name = "dol_save_server"
version = "0.9.1"
edition = "2024"
authors = ["C113<949536395@qq.com>"]

[dependencies]
axum = { version = "0.8.1", features = [] }
axum-server = { version = "0.7.1", features = ["tls-rustls-no-provider"] }
base64 = "0.22.1"
chrono = { version = "0.4.39", default-features = false, features = ["clock", "std"] }
duration-str = "0.17.0"
educe = { version = "0.6.0", default-features = false, features = ["Debug"] }
glob = "0.3.2"
include_dir = "0.7.4"
lz-str = "0.2.1"
mail-send = "0.5.0"
mime_guess = "2.0.5"
mtzip = "4.0.3"
path-absolutize = "3.1.1"
regex = "1.11.1"
rustls = { version = "0.23.22", default-features = false, features = ["std", "ring"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "net", "fs", "io-util"] }
toml = "0.8.19"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs", "compression-full", "set-header", "cors"] }
tower-sessions = "0.14.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["chrono", "env-filter"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
